--- a/src/app/pages/dashboard/admin dashboard/dashboard3/dashboard3.component.html
+++ b/src/app/pages/dashboard/admin dashboard/dashboard3/dashboard3.component.html
@@ -1,1 +1,6 @@
-<p>dashboard3 works!</p>
+<!-- begin::Header -->
+<div class="card-header border-0 pt-5">
+    <div>
+        <app-tables-widget13 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget13>
+    </div>
+</div>
