--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget6/tables-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget6/tables-widget6.component.html
@@ -79,254 +79,60 @@
         <table class="table align-middle gs-0 gy-3">
           <!-- begin::Table head -->
           <thead>
-            <tr>
-              <th class="p-0 w-50px"></th>
-              <th class="p-0 min-w-150px text-gray-900 fw-bolder text-hover-primary mb-1 fs-5"
-                style="text-align: left;">Month</th>
-              <th class="p-0 min-w-140px text-gray-900 fw-bolder text-hover-primary mb-1 fs-5"
-                style="text-align: left;">Cr Sales</th>
-              <th class="p-0 min-w-120px text-gray-900 fw-bolder text-hover-primary mb-1 fs-5"
-                style="text-align: left;">Cr Payments</th>
+            <tr class="fw-bolder text-muted bg-light">
+              <th class="min-w-125px">Month</th>
+              <th class="min-w-125px">Cr Sales</th>
+              <th class="min-w-125px">Cr Payments</th>
             </tr>
           </thead>
           <!-- end::Table head -->
           <!-- begin::Table body -->
           <tbody>
             <tr>
-              <td>
-                <div class="p-0 w-50px">
-                  <!-- <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/001-boy.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span> -->
+              <td style="text-align: left;">
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
+                  </div>
                 </div>
               </td>
               <td style="text-align: left;">
-                <a href="#" class="p-0 min-w-150px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Jan 2024
-                </a>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
               <td style="text-align: left;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-140px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
-              </td>
-              <td style="text-align: left;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
             </tr>
             <tr>
-              <td>
-                <div class="p-0 w-50px">
-                  <!-- <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/001-boy.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span> -->
+              <td style="text-align: left;">
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Feb 2024</span>
+                  </div>
                 </div>
               </td>
               <td style="text-align: left;">
-                <a href="#" class="p-0 min-w-150px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Feb 2024
-                </a>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
               <td style="text-align: left;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-140px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
-              </td>
-              <td style="text-align: left;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
             </tr>
             <tr>
-              <td>
-                <div class="p-0 w-50px">
-                  <!-- <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/001-boy.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span> -->
+              <td style="text-align: left;">
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Mar 2024</span>
+                  </div>
                 </div>
               </td>
               <td style="text-align: left;">
-                <a href="#" class="p-0 min-w-150px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Mar 2024
-                </a>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
               <td style="text-align: left;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-140px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
-              </td>
-              <td style="text-align: left;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
             </tr>
-            <!-- <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/018-girl-9.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a
-                  href="#"
-                  class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
-                >
-                  Jessie Clarcson
-                </a>
-                <span class="text-muted fw-bold d-block">HTML, CSS Coding</span>
-              </td>
-              <td>
-                <span class="text-muted fw-bold d-block fs-7">Paid</span>
-                <span class="text-gray-900 fw-bolder d-block fs-5">$1,200,000</span>
-              </td>
-              <td class="text-end">
-                <span class="text-warning fs-7 fw-bolder">+52%</span>
-              </td>
-              <td class="text-end">
-                <a
-                  href="#"
-                  class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  "
-                >
-                  <app-keenicon name="arrow-right" class="fs-2"></app-keenicon>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/047-girl-25.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a
-                  href="#"
-                  class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
-                >
-                  Jessie Clarcson
-                </a>
-                <span class="text-muted fw-bold d-block"
-                  >PHP, Laravel, VueJS</span
-                >
-              </td>
-              <td>
-                <span class="text-muted fw-bold d-block fs-7">Paid</span>
-                <span class="text-gray-900 fw-bolder d-block fs-5">$1,200,000</span>
-              </td>
-              <td class="text-end">
-                <span class="text-danger fs-7 fw-bolder">+52%</span>
-              </td>
-              <td class="text-end">
-                <a
-                  href="#"
-                  class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  "
-                >
-                  <app-keenicon name="arrow-right" class="fs-2"></app-keenicon>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/014-girl-7.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a
-                  href="#"
-                  class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
-                >
-                  Natali Trump
-                </a>
-                <span class="text-muted fw-bold d-block">UI/UX Designer</span>
-              </td>
-              <td>
-                <span class="text-muted fw-bold d-block fs-7">Paid</span>
-                <span class="text-gray-900 fw-bolder d-block fs-5">$3,400,000</span>
-              </td>
-              <td class="text-end">
-                <span class="text-success fs-7 fw-bolder">-34%</span>
-              </td>
-              <td class="text-end">
-                <a
-                  href="#"
-                  class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  "
-                >
-                  <app-keenicon name="arrow-right" class="fs-2"></app-keenicon>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label">
-                    <img
-                      src="./assets/media/svg/avatars/043-boy-18.svg"
-                      class="h-75 align-self-end"
-                      alt=""
-                    />
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a
-                  href="#"
-                  class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
-                >
-                  Kevin Leonard
-                </a>
-                <span class="text-muted fw-bold d-block">Art Director</span>
-              </td>
-              <td>
-                <span class="text-muted fw-bold d-block fs-7">Paid</span>
-                <span class="text-gray-900 fw-bolder d-block fs-5"
-                  >$35,600,000</span
-                >
-              </td>
-              <td class="text-end">
-                <span class="text-info fs-7 fw-bolder">+230%</span>
-              </td>
-              <td class="text-end">
-                <a
-                  href="#"
-                  class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  "
-                >
-                  <app-keenicon name="arrow-right" class="fs-2"></app-keenicon>
-                </a>
-              </td>
-            </tr> -->
           </tbody>
           <!-- end::Table body -->
         </table>
