--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget7/tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget7/tables-widget7.component.html
@@ -53,99 +53,99 @@
         <table class="table align-middle gs-0 gy-3">
           <!-- begin::Table head -->
           <thead>
-            <tr>
-              <th class="p-0 min-w-120px fw-bolder" style="text-align: center;">Month</th>
-              <th class="p-0 min-w-120px fw-bolder" style="text-align: center;">Cr Sales</th>
-              <th class="p-0 min-w-120px fw-bolder" style="text-align: center;">Cr Payments</th>
-              <th class="p-0 min-w-120px fw-bolder" style="text-align: center;">Toll Recharge</th>
-              <th class="p-0 min-w-120px fw-bolder" style="text-align: center;">Toll Payments</th>
+            <tr class="fw-bolder text-muted bg-light">
+              <th class="min-w-125px">Month</th>
+              <th class="min-w-125px">Cr Sales</th>
+              <th class="min-w-125px">Cr Payments</th>
+              <th class="min-w-125px">Toll Recharge</th>
+              <th class="min-w-125px">Toll Payments</th>
             </tr>
           </thead>
           <!-- end::Table head -->
           <!-- begin::Table body -->
           <tbody>
             <tr>
-              <td style="text-align: center;">
-                <a href="#" class="p-0 min-w-120px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Jan 2024
-                </a>
+              <td>
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
+                  </div>
+                </div>
               </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
-              </td>
-            </tr>
-            <tr>
-              <td style="text-align: center;">
-                <a href="#" class="p-0 min-w-120px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Feb 2024
-                </a>
-              </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
-              </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
-              </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
-              </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
             </tr>
             <tr>
-              <td style="text-align: center;">
-                <a href="#" class="p-0 min-w-120px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Mar 2024
-                </a>
+              <td>
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
+                  </div>
+                </div>
               </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
             </tr>
             <tr>
-              <td style="text-align: center;">
-                <a href="#" class="p-0 min-w-120px text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Apr 2024
-                </a>
+              <td>
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
+                  </div>
+                </div>
               </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <!-- <span class="text-muted fw-bold d-block fs-7">Paid</span> -->
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-6">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
-              <td style="text-align: center;">
-                <span class="p-0 min-w-120px text-gray-900 text-hover-primary mb-1 fs-5">$200,500</span>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="d-flex align-items-center">
+                  <div class="d-flex justify-content-start flex-column">
+                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
+              </td>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
+              </td>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
+              </td>
+              <td>
+                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
               </td>
             </tr>
           </tbody>
