changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget14/tables-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget14/tables-widget14.component.html
@@ -1,1 +1,148 @@
-<p>tables-widget14 works!</p>
+<!-- begin::Body -->
+<div class="card-body py-3">
+
+    <div class="card-toolbar">
+        <ul class="nav" style="padding-left: 1000px;">
+            <li class="nav-item">
+                <a class="
+            nav-link
+            btn btn-sm btn-color-muted btn-active btn-active-light-primary
+            fw-bolder
+            px-4
+            me-1
+            " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_7_tab_1')">
+                    CSV
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- begin::Table container -->
+    <div class="table-responsive">
+        <!-- begin::Table -->
+        <table class="table align-middle gs-0 gy-4">
+            <!-- begin::Table head -->
+            <thead>
+                <tr class="fw-bolder text-muted bg-light">
+                    <th class="min-w-125px"></th>
+                    <th class="min-w-125px">Sept 2024 Toll Payment</th>
+                    <th class="min-w-125px">Sept 2024 Toll Recharge</th>
+                    <th class="min-w-125px">Sept 2024 Fuel Credit</th>
+                    <th class="min-w-125px">Sept 2024 Fuel Credit Payment</th>
+                    <th class="min-w-125px">Oct 2024 Toll Payment</th>
+                    <th class="min-w-125px">Oct 2024 Toll Recharge</th>
+                    <th class="min-w-125px">Oct 2024 Fuel Credit</th>
+                    <th class="min-w-125px">Oct 2024 Fuel Credit Payment</th>
+                </tr>
+            </thead>
+            <!-- end::Table head -->
+            <!-- begin::Table body -->
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-start flex-column">
+                                <span class="badge badge-light-primary fs-7 fw-bold">Total</span>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                </tr>
+            </tbody>
+            <!-- end::Table body -->
+        </table>
+        <!-- end::Table -->
+
+        <div class="card-toolbar">
+            <ul class="nav" style="padding-left: 1000px;">
+                <li class="nav-item">
+                    <a class="nav-link btn btn-sm btn-color-muted btn-active btn-active-light-primary fw-bolder px-4 me-1"
+                        data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_7_tab_1')">
+                        CSV
+                    </a>
+                </li>
+            </ul>
+        </div>  
+        <!-- begin::Table -->
+        <table class="table align-middle gs-0 gy-4">
+            <!-- begin::Table head -->
+            <thead>
+                <tr class="fw-bolder text-muted bg-light">
+                    <th class="min-w-125px"></th>
+                    <th class="min-w-125px">Sept 2024 Toll Payment</th>
+                    <th class="min-w-125px">Sept 2024 Toll Recharge</th>
+                    <th class="min-w-125px">Sept 2024 Fuel Credit</th>
+                    <th class="min-w-125px">Sept 2024 Fuel Credit Payment</th>
+                    <th class="min-w-125px">Oct 2024 Toll Payment</th>
+                    <th class="min-w-125px">Oct 2024 Toll Recharge</th>
+                    <th class="min-w-125px">Oct 2024 Fuel Credit</th>
+                    <th class="min-w-125px">Oct 2024 Fuel Credit Payment</th>
+                </tr>
+            </thead>
+            <!-- end::Table head -->
+            <!-- begin::Table body -->
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-start flex-column">
+                                <span class="badge badge-light-primary fs-7 fw-bold">Total</span>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                    <td>
+                        <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+                    </td>
+                </tr>
+            </tbody>
+            <!-- end::Table body -->
+        </table>
+        <!-- end::Table -->
+
+    </div>
+    <!-- end::Table container -->
+</div>
+<!-- begin::Body -->
