--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-5 mb-xl-10">
   <div class="card-body pt-9 pb-0">
-    <div class="d-flex flex-wrap flex-sm-nowrap mb-3">
+    <!-- <div class="d-flex flex-wrap flex-sm-nowrap mb-3">
       <div class="me-7 mb-4">
         <div
           class="
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="d-flex overflow-auto h-55px">
       <ul
@@ -253,7 +253,7 @@
             routerLink="/crafted/pages/profile/overview"
             routerLinkActive="active"
           >
-            Overview
+            DEALER LIST
           </a>
         </li>
         <li class="nav-item">
@@ -262,7 +262,7 @@
             routerLink="/crafted/pages/profile/projects"
             routerLinkActive="active"
           >
-            Projects
+            REQUEST
           </a>
         </li>
         <li class="nav-item">
@@ -271,10 +271,10 @@
             routerLink="/crafted/pages/profile/campaigns"
             routerLinkActive="active"
           >
-            Campaigns
+            DEMO/REMOVED
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="nav-link text-active-primary me-6"
             routerLink="/crafted/pages/profile/documents"
@@ -291,7 +291,7 @@
           >
             Connections
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
