--- a/src/app/pages/dashboard/admin dashboard/dashboard4/dashboard4.component.html
+++ b/src/app/pages/dashboard/admin dashboard/dashboard4/dashboard4.component.html
@@ -1,1 +1,6 @@
-<p>dashboard4 works!</p>
+
+<div class="card-header border-0 pt-5">
+    <div>
+        <app-tables-widget14 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget14>
+    </div>
+</div>
